[project]
name = "comfyui-textarea-command"
description = "Add command and comment in textarea.  (e.g. // Disabled line)"
version = "1.0.3"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/shinich39/comfyui-textarea-command"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shinich39"
DisplayName = "comfyui-textarea-command"
Icon = ""
