[project]
name = "comfyui-textarea-command"
description = "Add shortcuts for quick writing in textarea. Nestable dynamic prompt. Tab to quickly select a token. Improved undo, redo history in textarea."
version = "1.0.3"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/shinich39/comfyui-textarea-command"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shinich39"
DisplayName = "comfyui-textarea-command"
Icon = ""
